--- a/Alpha/AlphaMvc/Views/JobOrder/CreateJobOrder.cshtml
+++ b/Alpha/AlphaMvc/Views/JobOrder/CreateJobOrder.cshtml
@@ -177,7 +177,7 @@
                                                                 <input id="No" type="text" value="" class="tdno" disabled />
                                                             </td>
                                                             <td>
-                                                                <select id="cmbIncomeType">
+                                                                <select id="cmbIncomeType" class="Select1">
                                                                 </select>
                                                             </td>
                                                             <td>
@@ -208,7 +208,7 @@
                                                                 <input id="No" type="text" value="" class="tdno" disabled />
                                                             </td>
                                                             <td>
-                                                                <select class="select1">
+                                                                <select class="Select1">
                                                                 </select>
                                                             </td>
                                                             <td>
