--- a/Alpha/AlphaMvc/Views/JobOrder/CreateJobOrder.cshtml
+++ b/Alpha/AlphaMvc/Views/JobOrder/CreateJobOrder.cshtml
@@ -146,6 +146,7 @@
                                                         <tr>
                                                             <th></th>
                                                             <th>Item</th>
+                                                            <th class="hidecolumn">ID</th>
                                                             <th>Description</th>
                                                             <th>Unit</th>
                                                             <th>Qty</th>
@@ -168,7 +169,7 @@
                                                             <td colspan="3"><input id="Premium" type="text" value="" class="text-size170 txtdisablefooter" disabled /></td>
                                                         </tr>
                                                     </tfoot>
-                                                    <tbody>
+                                                    <tbody id="result">
                                                         <tr class="RowCal">
                                                             <td>
                                                                 <img class="drag-handle" src="@Url.Content("~/images/drag.png")" alt="click and drag to rearrange" />
@@ -177,8 +178,7 @@
                                                                 <input id="No" type="text" value="" class="tdno" disabled />
                                                             </td>
                                                             <td>
-                                                                <select id="cmbIncomeType" class="Select1">
-                                                                </select>
+                                                                <select id="cmbIncomeType" class="Select1"></select>
                                                             </td>
                                                             <td>
                                                                 <input type="text" id="txtUnitWeight" class="UnitWeight text-size80 textright">
@@ -208,8 +208,7 @@
                                                                 <input id="No" type="text" value="" class="tdno" disabled />
                                                             </td>
                                                             <td>
-                                                                <select class="Select1">
-                                                                </select>
+                                                                <select class="Select1"></select>
                                                             </td>
                                                             <td>
                                                                 <input type="text" id="txtUnitWeight" class="UnitWeight text-size80 textright" />
@@ -218,14 +217,14 @@
                                                                 <input type="text" id="txtQty" class="Quantity text-size80 textright" onchange="CalSum()" />
                                                             </td>
                                                             <td>
-                                                                <input type="text"  id="txtUnitPrice" class="Price text-size130 textright" onchange="CalSum()" />
+                                                                <input type="text" id="txtUnitPrice" class="Price text-size130 textright" onchange="CalSum()" />
                                                             </td>
                                                             <td>
                                                                 <input type="text" id="txtAmount" disabled class="Amount text-size165 txtdisablerow">
                                                             </td>
                                                             <td>
                                                                 <div class="clone-1"><img class="row-cloner" src="@Url.Content("~/images/clone.png")" alt="Clone Row" /></div>
-</td>
+                                                            </td>
                                                             <td>
                                                                 <img class="row-remover" src="@Url.Content("~/images/remove.png")" alt="Remove Row" />
                                                             </td>
