--- a/Alpha/AlphaMvc/Views/JobOrder/CreateJobOrder.cshtml
+++ b/Alpha/AlphaMvc/Views/JobOrder/CreateJobOrder.cshtml
@@ -275,30 +275,19 @@
                                                                 <input id="No" type="text" value="" class="tdno" disabled />
                                                             </td>
                                                             <td>
-                                                                <select class="select">
-                                                                    <option value="1">Job Lead</option>
-                                                                    <option value="2">Job Tech</option>
-                                                                    <option value="3">Job Manpower</option>
-                                                                    <option value="3">Allowance</option>
-                                                                </select>
+                                                                <select class="Expenseselect"></select>
                                                             </td>
                                                             <td>
-                                                                <select class="unitSelect">
-                                                                    <option value="1">Person</option>
-                                                                    <option value="2">Day</option>
-                                                                    <option value="3">Date</option>
-                                                                    <option value="3">ea</option>
-                                                                    <option value="3">Trip</option>
-                                                                </select>
+                                                                <select class="unitSelect"></select>
                                                             </td>
                                                             <td>
-                                                                <input type="text" id="Time" name="Qty" class="text-size80">
+                                                                <input type="text" id="Time" name="Qty" class="Quantity text-size80" onchange="CalSumExpense()">
                                                             </td>
                                                             <td>
-                                                                <input type="text" id="Time" name="UnitPrice" class="text-size130">
+                                                                <input type="text" id="Time" name="UnitPrice" class="Price text-size130" onchange="CalSumExpense()">
                                                             </td>
                                                             <td>
-                                                                <input type="text" id="Time" name="Amount" class="text-size165 txtdisablerow" disabled>
+                                                                <input type="text" id="Time" name="Amount" class="Amount text-size165 txtdisablerow" disabled>
                                                             </td>
 
                                                             <td>
@@ -316,30 +305,19 @@
                                                                 <input id="No" type="text" value="" class="tdno" disabled />
                                                             </td>
                                                             <td>
-                                                                <select class="select">
-                                                                    <option value="1">Job Lead</option>
-                                                                    <option value="2">Job Tech</option>
-                                                                    <option value="3">Job Manpower</option>
-                                                                    <option value="3">Allowance</option>
-                                                                </select>
+                                                                <select class="Expenseselect"></select>
                                                             </td>
                                                             <td>
-                                                                <select class="unitSelect">
-                                                                    <option value="1">Person</option>
-                                                                    <option value="2">Day</option>
-                                                                    <option value="3">Date</option>
-                                                                    <option value="3">ea</option>
-                                                                    <option value="3">Trip</option>
-                                                                </select>
+                                                                <select class="unitSelect"></select>
                                                             </td>
                                                             <td>
-                                                                <input type="text" id="Time" name="Qty" class="text-size80">
+                                                                <input type="text" id="Time" name="Qty" class="Quantity text-size80" onchange="CalSumExpense()">
                                                             </td>
                                                             <td>
-                                                                <input type="text" id="Time" name="UnitPrice" class="text-size130">
+                                                                <input type="text" id="Time" name="UnitPrice" class="Price text-size130" onchange="CalSumExpense()">
                                                             </td>
                                                             <td>
-                                                                <input type="text" id="Time" name="Amount" class="text-size165 txtdisablerow" disabled>
+                                                                <input type="text" id="Time" name="Amount" class="Amount text-size165 txtdisablerow" disabled>
                                                             </td>
                                                             <td>
                                                                 <div class="clone-1"><img class="row-cloner" src="@Url.Content("~/images/clone.png")" alt="Clone Row" /></div>
@@ -351,7 +329,7 @@
                                                     </tbody>
                                                 </table>
                                                 </div>
-                                            <button id="add-row7" class="btn btn-primary">Add Row</button>
+                                            <button id="add-row7" onclick="AddRowExpense()" class="btn btn-primary">Add Row</button>
                                             @*<div class="myDIV">*@
                                                 <table class="tableexpense">
                                                     <tr>
