--- a/Alpha/AlphaMvc/Views/JobOrder/CreateJobOrder.cshtml
+++ b/Alpha/AlphaMvc/Views/JobOrder/CreateJobOrder.cshtml
@@ -169,7 +169,7 @@
                                                             <td colspan="3"><input id="Premium" type="text" value="" class="text-size170 txtdisablefooter" disabled /></td>
                                                         </tr>
                                                     </tfoot>
-                                                    <tbody id="result">
+                                                    <tbody>
                                                         <tr class="RowCal">
                                                             <td>
                                                                 <img class="drag-handle" src="@Url.Content("~/images/drag.png")" alt="click and drag to rearrange" />
@@ -275,7 +275,7 @@
                                                                 <input id="No" type="text" value="" class="tdno" disabled />
                                                             </td>
                                                             <td>
-                                                                <select class="Expenseselect"></select>
+                                                                <select id="cmbExpenseType" class="Expenseselect"></select>
                                                             </td>
                                                             <td>
                                                                 <select class="unitSelect"></select>
@@ -305,7 +305,7 @@
                                                                 <input id="No" type="text" value="" class="tdno" disabled />
                                                             </td>
                                                             <td>
-                                                                <select class="Expenseselect"></select>
+                                                                <select id="cmbExpenseType" class="Expenseselect"></select>
                                                             </td>
                                                             <td>
                                                                 <select class="unitSelect"></select>
