--- a/Alpha/AlphaMvc/Views/JobOrder/CreateJobOrder.cshtml
+++ b/Alpha/AlphaMvc/Views/JobOrder/CreateJobOrder.cshtml
@@ -267,7 +267,7 @@
                                                         </tr>
                                                     </tfoot>
                                                     <tbody>
-                                                        <tr>
+                                                        <tr class="RowCal">
                                                             <td>
                                                                 <img class="drag-handle" src="@Url.Content("~/images/drag.png")" alt="click and drag to rearrange" />
                                                             </td>
