--- a/Alpha/AlphaMvc/Views/JobOrder/CreateJobOrder.cshtml
+++ b/Alpha/AlphaMvc/Views/JobOrder/CreateJobOrder.cshtml
@@ -275,7 +275,7 @@
                                                                 <input id="No" type="text" value="" class="tdno" disabled />
                                                             </td>
                                                             <td>
-                                                                <select id="cmbExpenseType" class="Expenseselect"></select>
+                                                                <select id="cmbExpenseType" class="ExpenseSelect"></select>
                                                             </td>
                                                             <td>
                                                                 <select class="unitSelect"></select>
@@ -297,7 +297,7 @@
                                                                 <img class="row-remover" src="@Url.Content("~/images/remove.png")" alt="Remove Row" />
                                                             </td>
                                                         </tr>
-                                                        <tr id="add-template7">
+                                                        <tr class="RowCal" id="add-template7">
                                                             <td>
                                                                 <img class="drag-handle" src="@Url.Content("~/images/drag.png")" alt="click and drag to rearrange" />
                                                             </td>
@@ -305,7 +305,7 @@
                                                                 <input id="No" type="text" value="" class="tdno" disabled />
                                                             </td>
                                                             <td>
-                                                                <select id="cmbExpenseType" class="Expenseselect"></select>
+                                                                <select id="cmbExpenseType" class="ExpenseSelect"></select>
                                                             </td>
                                                             <td>
                                                                 <select class="unitSelect"></select>
