--- a/Alpha/AlphaMvc/Views/JobOrder/CreateJobOrder.cshtml
+++ b/Alpha/AlphaMvc/Views/JobOrder/CreateJobOrder.cshtml
@@ -267,7 +267,7 @@
                                                         </tr>
                                                     </tfoot>
                                                     <tbody>
-                                                        <tr class="RowCal">
+                                                        <tr class="RowCal1">
                                                             <td>
                                                                 <img class="drag-handle" src="@Url.Content("~/images/drag.png")" alt="click and drag to rearrange" />
                                                             </td>
@@ -281,13 +281,13 @@
                                                                 <select class="unitSelect"></select>
                                                             </td>
                                                             <td>
-                                                                <input type="text" id="Time" name="Qty" class="Quantity text-size80" onchange="CalSumExpense()">
+                                                                <input type="text" id="txtQty" name="Qty" class="Quantity text-size80" onchange="CalSumExpense()">
                                                             </td>
                                                             <td>
-                                                                <input type="text" id="Time" name="UnitPrice" class="Price text-size130" onchange="CalSumExpense()">
+                                                                <input type="text" id="txtUnitPrice" name="UnitPrice" class="Price text-size130" onchange="CalSumExpense()">
                                                             </td>
                                                             <td>
-                                                                <input type="text" id="Time" name="Amount" class="Amount text-size165 txtdisablerow" disabled>
+                                                                <input type="text" id="txtAmount" name="Amount" class="Amount text-size165 txtdisablerow" disabled>
                                                             </td>
 
                                                             <td>
@@ -297,7 +297,7 @@
                                                                 <img class="row-remover" src="@Url.Content("~/images/remove.png")" alt="Remove Row" />
                                                             </td>
                                                         </tr>
-                                                        <tr class="RowCal" id="add-template7">
+                                                        <tr class="RowCal1" id="add-template7">
                                                             <td>
                                                                 <img class="drag-handle" src="@Url.Content("~/images/drag.png")" alt="click and drag to rearrange" />
                                                             </td>
@@ -311,13 +311,13 @@
                                                                 <select class="unitSelect"></select>
                                                             </td>
                                                             <td>
-                                                                <input type="text" id="Time" name="Qty" class="Quantity text-size80" onchange="CalSumExpense()">
+                                                                <input type="text" id="txtQty" name="Qty" class="Quantity text-size80" onchange="CalSumExpense()">
                                                             </td>
                                                             <td>
-                                                                <input type="text" id="Time" name="UnitPrice" class="Price text-size130" onchange="CalSumExpense()">
+                                                                <input type="text" id="txtUnitPrice" name="UnitPrice" class="Price text-size130" onchange="CalSumExpense()">
                                                             </td>
                                                             <td>
-                                                                <input type="text" id="Time" name="Amount" class="Amount text-size165 txtdisablerow" disabled>
+                                                                <input type="text" id="txtAmount" name="Amount" class="Amount text-size165 txtdisablerow" disabled>
                                                             </td>
                                                             <td>
                                                                 <div class="clone-1"><img class="row-cloner" src="@Url.Content("~/images/clone.png")" alt="Clone Row" /></div>
