--- a/Alpha/AlphaMvc/Views/JobOrder/CreateJobOrder.cshtml
+++ b/Alpha/AlphaMvc/Views/JobOrder/CreateJobOrder.cshtml
@@ -169,8 +169,8 @@
                                                             <td colspan="3"><input id="Premium" type="text" value="" class="text-size170 txtdisablefooter" disabled /></td>
                                                         </tr>
                                                     </tfoot>
-                                                    <tbody>
-                                                        <tr class="RowCal">
+                                                    <tbody id="tBodyRowIncome">
+                                                        <tr  class="RowCal">
                                                             <td>
                                                                 <img class="drag-handle" src="@Url.Content("~/images/drag.png")" alt="click and drag to rearrange" />
                                                             </td>
