--- a/Alpha/AlphaMvc/Views/ExpenseMaster/CreateExpenseMaster.cshtml
+++ b/Alpha/AlphaMvc/Views/ExpenseMaster/CreateExpenseMaster.cshtml
@@ -6,7 +6,8 @@
 <h2>Master Expense Create</h2>
 <script src="@Url.Content("~/Scripts/CUDS/ExpenseMaster/CreateExpenseMaster.js")" type="text/javascript"></script>
 <!-- Modal -->
-<div class="modal fade" id="customerDialog" role="dialog"></div>
+<div class="modal fade" id="customerDialog" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true"></div>
+
 @using (Html.BeginForm())
 {
     //===================================================================CSS w3school
@@ -20,34 +21,10 @@
         <br />
         <ul class="form-style">
             <li>
-                @*<input type="button" value="Save" data-toggle="modal" data-target="#customerDialog" />*@
-                @*<input type="button" value="Save" onclick="ConfirmData()" />*@
+
+                <button type="button" class="btn btn-primary" onclick="ConfirmDialog('Create','ExpenseMaster',0)">Save</button>
             </li>
         </ul>
     </form>
 
 }
-
-<script>
-    //function ConfirmData() {
-
-    //    var input = '<input type="button" value="Save" data-toggle="modal" data-target="#customerDialog" />';
-    //    document.getElementById("input").innerHTML = input;
-    
-    //}
-$(document).ready(function()
-{
-    var html = '<div class="modal-dialog">';
-    html += '<div class="modal-content">';
-    html += '<div class="modal-header">';
-    html += '<button type="button" class="close" data-dismiss="modal">&times;</button>';
-    html += '<h4 class="modal-title">Customer</h4>';
-    html += '</div>';
-    html += '<div class="modal-body">Do you want to Save?</div>';
-    html += '<div class="modal-footer">';
-    html += '<button type="button" class="btn btn-primary" onclick="CreateData()">Yes</button>';
-    html += '<button type="button" class="btn btn-primary" data-dismiss="modal">No</button>';
-    html += '</div></div></div>';
-    document.getElementById("customerDialog").innerHTML = html; 
-});
-</script>
