--- a/Alpha/AlphaMvc/Views/ExpenseMaster/EditExpenseMaster.cshtml
+++ b/Alpha/AlphaMvc/Views/ExpenseMaster/EditExpenseMaster.cshtml
@@ -5,6 +5,7 @@
 
 <h2>Master Expense Edit</h2>
 <script src="@Url.Content("~/Scripts/CUDS/ExpenseMaster/EditExpenseMaster.js")" type="text/javascript"></script>
+<div class="modal fade" id="customerDialog" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true"></div>
 
     @using (Html.BeginForm())
     {
@@ -18,7 +19,7 @@
             </ul>
             <ul class="form-style">
                 <li>
-                    <input type="submit" value="Save" id="Update" onblur="" />
+                    <button type="button" class="btn btn-primary" onclick="ConfirmDialog('Update', 'ExpenseMaster', @Request.Params["id"])" >Save</button>
                 </li>
             </ul>
         </form>
@@ -32,7 +33,5 @@
         GetData(@Request.Params["id"]);
 
     });
-
-    $("#Update").click(function () { Update(@Request.Params["id"]); });
 
 </script>
