--- a/Alpha/AlphaMvc/Views/Shared/_Layout.cshtml
+++ b/Alpha/AlphaMvc/Views/Shared/_Layout.cshtml
@@ -8,6 +8,8 @@
         <link href="@Url.Content("~/Content/Style.css")" rel="stylesheet" type="text/css" />
         <link href="@Url.Content("~/Content/jquery-ui.css")" rel="stylesheet" type="text/css" />
         <script src="@Url.Content("~/Scripts/jquery-1.12.4.js")" type="text/javascript"></script>
+        @*---------------------------- ConfirmDialog --------------------------*@
+        <script src="@Url.Content("~/Scripts/ConfirmDialog/ConfirmDialog.js")" type="text/javascript"></script>
         @*---------------------------- Menu,Table --------------------------*@
         <script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.11.2/jquery-ui.min.js"></script>
         <link href="@Url.Content("~/Content/menu.css")" rel="stylesheet" type="text/css" />
