--- a/Alpha/AlphaMvc/Views/IncomeMaster/EditIncomeMaster.cshtml
+++ b/Alpha/AlphaMvc/Views/IncomeMaster/EditIncomeMaster.cshtml
@@ -5,6 +5,7 @@
 
 <h2>Master Income Edit</h2>
 <script src="@Url.Content("~/Scripts/CUDS/IncomeMaster/EditIncomeMaster.js")" type="text/javascript"></script>
+<div class="modal fade" id="ShowDialog" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true"></div>
     @using (Html.BeginForm())
     {
         //===================================================================CSS w3school
@@ -18,7 +19,7 @@
 
             <ul class="form-style">
                 <li>
-                    <input type="submit" value="Save" id="Update" onblur="Redirect()"/>
+                    <button type="button" class="btn btn-primary" onclick="ConfirmDialog('Update', 'IncomeMaster', @Request.Params["id"])">Save</button>
                 </li>
             </ul>
         </form>
@@ -27,10 +28,6 @@
 <script type="text/javascript">
     $(document).ready(function () {
         GetData(@Request.Params["id"]);
-    });
-
-    $("#Update").click(function () {
-        Update(@Request.Params["id"])
     });
 </script>
 
