--- a/Alpha/AlphaMvc/Views/JobOrder/IndexJobOrder.cshtml
+++ b/Alpha/AlphaMvc/Views/JobOrder/IndexJobOrder.cshtml
@@ -4,6 +4,7 @@
 
 <h2>JobOrder</h2>
 <script src="@Url.Content("~/Scripts/CUDS/JobOrder/IndexJobOrder.js")" type="text/javascript"></script>
+<div class="modal fade" id="ShowDialog" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true"></div>
 @* ------------------------------- grid  -------------------------------*@
 <table class="barattach-2">
     <tr>
