--- a/Alpha/AlphaMvc/Views/BDC/EditBDC.cshtml
+++ b/Alpha/AlphaMvc/Views/BDC/EditBDC.cshtml
@@ -5,6 +5,7 @@
 
 <h2>BreakDown Cost Edit</h2>
 <script src="@Url.Content("~/Scripts/CUDS/BDC/EditBDC.js")" type="text/javascript"></script>
+<div class="modal fade" id="ShowDialog" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true"></div>
 <table>
     <tr>
         <td>
@@ -256,7 +257,7 @@
             </table>
             <ul class="form-style-1">
                 <li>
-                    <input type="submit" value="Save" id="Update" onblur="Redirect()" />
+                    <button type="button" class="btn btn-primary" onclick="ConfirmDialog('Update', 'BDC', @Request.Params["id"])">Save</button>
                 </li>
             </ul>
         </form>
@@ -271,6 +272,6 @@
 
     });
 
-    $("#Update").click(function () { Update(@Request.Params["id"]); });
+    @*$("#Update").click(function () { Update(@Request.Params["id"]); });*@
 
 </script>
