--- a/Alpha/AlphaMvc/Views/BDC/IndexBDC.cshtml
+++ b/Alpha/AlphaMvc/Views/BDC/IndexBDC.cshtml
@@ -8,6 +8,7 @@
 @* ------------------------------- grid  -------------------------------*@
 <script src="@Url.Content("~/Scripts/EditableGrid/paging.js")" type="text/javascript"></script>
 <script src="@Url.Content("~/Scripts/CUDS/BDC/IndexBDC.js")" type="text/javascript"></script>
+<div class="modal fade" id="ShowDialog" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true"></div>
 <style>
     .paging-nav {
         text-align: right;
