--- a/Alpha/AlphaMvc/Views/ExpenseMaster/IndexExpenseMaster.cshtml
+++ b/Alpha/AlphaMvc/Views/ExpenseMaster/IndexExpenseMaster.cshtml
@@ -5,7 +5,7 @@
 <h2>Master Expense</h2>
 <script src="@Url.Content("~/Scripts/EditableGrid/paging.js")" type="text/javascript"></script>
 <script src="@Url.Content("~/Scripts/CUDS/ExpenseMaster/IndexExpenseMaster.js")" type="text/javascript"></script>
-<div class="modal fade" id="customerDialog" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true"></div>
+<div class="modal fade" id="ShowDialog" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true"></div>
 
 <style>
     .paging-nav {
