--- a/Alpha/AlphaMvc/Views/IncomeMaster/CreateIncomeMaster.cshtml
+++ b/Alpha/AlphaMvc/Views/IncomeMaster/CreateIncomeMaster.cshtml
@@ -5,6 +5,7 @@
 
 <h2>Master Income Create</h2>
 <script src="@Url.Content("~/Scripts/CUDS/IncomeMaster/CreateIncomeMaster.js")" type="text/javascript"></script>
+<div class="modal fade" id="ShowDialog" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true"></div>
 <div id="container">
     @using (Html.BeginForm())
     {
@@ -20,7 +21,7 @@
 
             <ul class="form-style">
                 <li>
-                    <input type="submit" value="Save" id="Create" />
+                    <button type="button" class="btn btn-primary" onclick="ConfirmDialog('Create','IncomeMaster',0)">Save</button>
                 </li>
             </ul>
         </form>
