--- a/Alpha/AlphaMvc/Views/JobOrder/CreateJobOrder.cshtml
+++ b/Alpha/AlphaMvc/Views/JobOrder/CreateJobOrder.cshtml
@@ -12,6 +12,7 @@
 <script src="@Url.Content("~/Scripts/timepicker/wickedpicker.js")" type="text/javascript"></script>
 @* =============== Pager *@
 <script src="@Url.Content("~/Scripts/EditableGrid/Pager.js")" type="text/javascript"></script>
+<div class="modal fade" id="ShowDialog" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true"></div>
 
     <!-- Modal -->
     <div class="modal fade" id="customerDialog" role="dialog">
@@ -848,7 +849,7 @@
 
             <ul class="form-style-1">
                 <li>
-                    <input type="submit" value="Save" id="Create" />
+                    <button type="button" class="btn btn-primary" onclick="ConfirmDialog('Create','JobOrder',0)">Save</button>
                 </li>
             </ul>
         </form>
