--- a/Alpha/AlphaMvc/Views/JobOrder/EditJobOrder.cshtml
+++ b/Alpha/AlphaMvc/Views/JobOrder/EditJobOrder.cshtml
@@ -12,6 +12,7 @@
 <script src="@Url.Content("~/Scripts/EditableGrid/Pager.js")" type="text/javascript"></script>
 
 <script src="@Url.Content("~/Scripts/CUDS/JobOrder/EditJobOrder.js")" type="text/javascript"></script>
+<div class="modal fade" id="ShowDialog" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true"></div>
 
 <!-- Modal -->
 <div class="modal fade" id="customerDialog" role="dialog">
@@ -869,7 +870,7 @@
 
         <ul class="form-style-1">
             <li>
-                <input type="submit" value="Save" id="Update" onblur="Redirect()"/>
+                <button type="button" class="btn btn-primary" onclick="ConfirmDialog('Update', 'JobOrder', @Request.Params["id"])">Save</button>
             </li>
         </ul>
     </form>
@@ -880,7 +881,5 @@
         GetData(@Request.Params["id"]);
 
     });
-
-    $("#Update").click(function () { Update(@Request.Params["id"]); });
 
 </script>
