--- a/Alpha/AlphaMvc/Views/Products/CreateProducts.cshtml
+++ b/Alpha/AlphaMvc/Views/Products/CreateProducts.cshtml
@@ -7,6 +7,7 @@
     Product Create
 </h2>
 <script src="@Url.Content("~/Scripts/CUDS/Products/CreateProducts.js")" type="text/javascript"></script>
+<div class="modal fade" id="ShowDialog" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true"></div>
 <style>
     table {
         background: #fbfbf1;
@@ -80,7 +81,7 @@
                     <textarea name="field5" id = "txtRemark" class="field-long field-textarea"></textarea>
                 </li>
                 <li>
-                    <input type="submit" value="Save" id="Create"  />
+                    <button type="button" class="btn btn-primary" onclick="ConfirmDialog('Create','Product',0)">Save</button>
                 </li>
             </ul>
             <ul class="attachgrid">
