--- a/Alpha/AlphaMvc/Views/Products/EditProducts.cshtml
+++ b/Alpha/AlphaMvc/Views/Products/EditProducts.cshtml
@@ -7,6 +7,7 @@
     Product Edit
 </h2>
 <script src="@Url.Content("~/Scripts/CUDS/Products/EditProducts.js")" type="text/javascript"></script>
+<div class="modal fade" id="ShowDialog" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true"></div>
 <style>
     table {
         background: #fbfbf1;
@@ -69,7 +70,7 @@
                     <textarea name="field5" id="txtRemark" class="field-long field-textarea"></textarea>
                 </li>
                 <li>
-                    <input type="submit" value="Save" id="Update" onblur="Redirect()"/>
+                    <button type="button" class="btn btn-primary" onclick="ConfirmDialog('Update', 'Product', @Request.Params["id"])">Save</button>
                 </li>
             </ul>
             <ul class="attachgrid">
@@ -174,10 +175,6 @@
 
         GetData(@Request.Params["id"]);
 
-    });
-
-    $("#Update").click(function () {
-        Update(@Request.Params["id"]);
     });
 </script>
 
