--- a/Alpha/AlphaMvc/Views/JobOrder/CreateJobOrder.cshtml
+++ b/Alpha/AlphaMvc/Views/JobOrder/CreateJobOrder.cshtml
@@ -159,7 +159,7 @@
                                                     <tfoot>
                                                         <tr>
                                                             <td colspan="6" class="textalign">Total</td>
-                                                            <td colspan="3"><input id="Premium" type="text" value="" class="text-size170 txtdisablefooter" disabled /></td>
+                                                            <td colspan="3"><input id="txtTotal" type="text" value="" class="text-size170 txtdisablefooter" disabled /></td>
                                                         </tr>
                                                         <tr>
                                                             <td colspan="6" class="textalign">Discount</td>
@@ -167,7 +167,7 @@
                                                         </tr>
                                                         <tr>
                                                             <td colspan="6" class="textalign">Sub Total</td>
-                                                            <td colspan="3"><input id="Premium" type="text" value="" class="text-size170 txtdisablefooter" disabled /></td>
+                                                            <td colspan="3"><input id="txtSubTotal" type="text" value="" class="text-size170 txtdisablefooter" disabled /></td>
                                                         </tr>
                                                     </tfoot>
                                                     <tbody id="tBodyRowIncome">
